--- a/localization/russian/modifiers/TFE_brythonic_struggle_modifiers_l_russian.yml
+++ b/localization/russian/modifiers/TFE_brythonic_struggle_modifiers_l_russian.yml
@@ -1,2 +1,2 @@
 ﻿l_russian:
-brythonic_adventurer_modifier:0 "Overseas Adventurer" #NT!
+brythonic_adventurer_modifier:0 "Заморский авантюрист" #NT!
