--- a/localization/russian/modifiers/deities_l_russian.yml
+++ b/localization/russian/modifiers/deities_l_russian.yml
@@ -1,20 +1,20 @@
 ﻿l_russian:
- high_god:0 "Worshipper of Taranis" #NT!
- health_god:0 "Worshipper of Epona" #NT!
- wealth_god:0 "Worshipper of Cernunnos" #NT!
- knowledge_god:0 "Worshipper of Brigid" #NT!
- war_god:0 "Worshipper of Lugh" #NT!
- cathedral_of_africa:0 "Cathedral of Africa" #NT!
+ high_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Тараниса', 'Почитатель Тараниса' )]" #NT!
+ health_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Эпоны', 'Почитатель Эпоны' )]" #NT!
+ wealth_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Кернунна', 'Почитатель Кернунна' )]" #NT!
+ knowledge_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Бригиты', 'Почитатель Бригиты' )]" #NT!
+ war_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Луга', 'Почитатель Луга' )]" #NT!
+ cathedral_of_africa:0 "Собор Африки" #NT!
 
- mars_god:0 "Worshipper of Mars" #NT!
- mercury_god:0 "Worshipper of Mercury" #NT!
- minerva_god:0 "Worshipper of Minerva" #NT!
- laverna_god:0 "Worshipper of Laverna" #NT!
- venus_god:0 "Worshipper of Venus" #NT!
+ mars_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Марса', 'Почитатель Марса' )]" #NT!
+ mercury_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Меркурия', 'Почитатель Меркурия' )]" #NT!
+ minerva_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Миневры', 'Почитатель Миневры' )]" #NT!
+ laverna_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Лаверны', 'Почитатель Лаверны' )]" #NT!
+ venus_god:0 "[Select_CString( CHARACTER.IsFemale, 'Почитательница Венеры', 'Почитатель Венеры' )]" #NT!
 
- apotheosised_emperor_tomb:0 "Tomb of an Apotheosised Emperor" #NT!
- apotheosised_emperor_tomb_desc:0 "A great Roman Emperor was buried here; to honor and celebrate their memory, one of their successors later apotheosised them." #NT!
- apotheosised_relative:0 "Apotheosised Relative" #NT!
- apotheosised_relative_desc:0 "This character apotheosised a late, great Roman Emperor of which he was related to" #NT!
- apotheosised_dynasty:0 "Dynasty of an Apotheosised Emperor" #NT!
- apotheosised_dynasty_desc:0 "A late apotheosised Emperor belongs to this dynasty and thus gives them great status among their fellow followers" #NT!
+ apotheosised_emperor_tomb:0 "Гробница обожествленного императора" #NT!
+ apotheosised_emperor_tomb_desc:0 "Здесь был похоронен великий римский император; чтобы почтить и отпраздновать их память, один из их преемников позже обожествил их." #NT!
+ apotheosised_relative:0 "Обожествленный родственник" #NT!
+ apotheosised_relative_desc:0 "Этот персонаж олицетворял покойного великого римского императора, с которым он был связан родственными узами." #NT!
+ apotheosised_dynasty:0 "Династия обожествленного императора" #NT!
+ apotheosised_dynasty_desc:0 "Поздний обожествленный император принадлежит к этой династии и, таким образом, дает им высокий статус среди своих собратьев-последователей." #NT!
