--- a/localization/russian/culture/new_cultures_l_russian.yml
+++ b/localization/russian/culture/new_cultures_l_russian.yml
@@ -495,9 +495,9 @@
  tujue:0 "Голубые тюрки" 
  tujue_prefix:0 "Турко" 
  tujue_collective_noun:0 "Голубо-тюркск" 
- tiele:0 "Теле" 
- tiele_prefix:0 "Тело" 
- tiele_collective_noun:0 "Телеск" 
+ tiele:0 "Телеуты" 
+ tiele_prefix:0 "Телеуто" 
+ tiele_collective_noun:0 "Телеутск" 
  saragur:0 "Сарагуры" 
  saragur_prefix:0 "Сарагуро" 
  saragur_collective_noun:0 "Сарагурск" 
@@ -622,7 +622,7 @@
  oghuz_group:0 "Огузская" 
  caucasian_group:0 "Калказская" 
  uralic_group:0 "Уральская"
- thyssagataen:0 "Фиссагетская" 
+ thyssagataen:0 "Фиссагеты" 
  thyssagataen_collective_noun:0 "Фиссагетск" 
  ciscaucassian:0 "Черкесская" 
  ciscaucassian_collective_noun:0 "Чуркесск" 
@@ -698,19 +698,19 @@
 
  heritage_semitic_name:0 "Семитское" 
  #History loc 
- hispano_roman_history_loc:0 "Сформирована из[CULTURE.GetName] и нескольких культур $celtiberian_group$ [Concept( 'heritage', 'наследия' )|E] в 220 году до Рождества Христова" 
+ hispano_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких культур кельтиберского [Concept( 'heritage', 'наследия' )|E] в 220 году до Рождества Христова" 
  gallo_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в 58 году до Рождества Христова" 
  afro_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в 146 году до Рождества Христова" 
- russian_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких культур Восточно-славянского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
+ russian_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких культур восточно-славянского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
  anglo_saxon_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году [DATE.GetYear]" 
- iranian_hun_history_loc:0 "Сформирована из различных культур $iranian_group$ и $turkic_group$ [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
+ iranian_hun_history_loc:0 "Сформирована из различных культур иранского и тюркского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
  tuyuhun_history_loc:0 "Выходцы из [CULTURE.GetName] поселившиеся на озере Цинхай в году  [DATE.GetYear]" 
  iranian_shaka_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] приблизительно в 150 году от Рождества Христова" 
  yuezhi_history_loc:0 "Сформирована из индоевропейских кочевников под влиянием иранцев и элиннов в 176 году до Рождества Христова" # Date when Yuezhi split after their defeat by the Xiongnu 
  punic_history_loc:0 "Откололась от [CULTURE.GetName] приблизительно в 800 году до Рождества Христова" 
  xianbei_history_loc:0 "Сформирована из остатков [CULTURE.GetName] после поражения от Сюнну в 208 году до Рождества Христова" 
  rouran_history_loc:0 "Сформирована из остатков [CULTURE.GetName] и [TARGET_CULTURE.GetName] около 200 года от Рождества Христова" 
- kangju_history_loc:0 "Сформирована из $iranian_group$ кочевников под руководством культуры [TARGET_CULTURE.GetName] в году 200 до Рождества Христова" 
+ kangju_history_loc:0 "Сформирована из иранских кочевников под руководством культуры [TARGET_CULTURE.GetName] в году 200 до Рождества Христова" 
  rhaetian_history_loc:0 "Откололась от [CULTURE.GetName] приблизительно в году 500 до Рождества Христова" 
  xiao_yuezhi_history_loc:0 "Сформирована из беженцев [CULTURE.GetName] которые искали убежища у [TARGET_CULTURE.GetName] в году 176 до Рождества Христова" 
  elymaean_history_loc:0 "Происходят от остатков нео-[CULTURE.GetName] под персидским правлением в первом тысячелетии до Рождества Христова" 
