--- a/localization/russian/bookmark/bm_395_empire_l_russian.yml
+++ b/localization/russian/bookmark/bm_395_empire_l_russian.yml
@@ -1,18 +1,18 @@
 ﻿l_russian:
- bm_395_empire:0 "A Divided Empire" #NT!
- bm_395_empire_desc:1 "On the 17th of January, 395 AD, Emperor Theodosius 'the Great' passed away, having brought stability back to the empire and bringing an end to paganism's influential role in governance, religion, and culture across the Roman world. The Roman Empire was divided into two, with Honorius inheriting the West and Arcadius inheriting the East. As one emperor is a child under a regency led by Flavius Stilicho and the other is seen as weak and easily manipulated, this bodes poorly for the divided empire . . . \n\nDespite their father's efforts, Honorius and Arcadius are forced to contend with the last remnants of paganism across the two empires, while foreign entities like the Huns and Sassanids compete for dominance against the Roman world. The Franks look toward expanding further into Gallia, while the Visigoths seek retribution for years of grievances committed by the Romans. \n\n#bold Playing as the sons of the late Theodosius, how will you guide the Western and Eastern Roman Empires?#!" #NT!
+ bm_395_empire:0 "Разделенная империя" 
+ bm_395_empire_desc:1 "17 января 395 года нашей эры император Феодосий «Великий» скончался, вернув стабильность в империю и положив конец влиятельной роли язычества в управлении, религии и культуре во всем римском мире. Римская империя была разделена на две части: Гонорий унаследовал Запад, а Аркадий - Восток. Поскольку один император является ребенком под регентством во главе с Флавием Стилихоном, а другой считается слабым и легко управляемым, это сулит плохие последствия для разделенной империи. . . . \n\nbold Несмотря на усилия своего отца, Гонорий и Аркадий вынуждены бороться с последними остатками язычества в двух империях, в то время как иностранные образования, такие как гунны и сасаниды, борются за господство с римским миром. Франки надеются на дальнейшую экспансию в Галлию, в то время как вестготы ищут возмездия за годы обид, причиненных римлянами. \n\n#Играя за сыновей покойного Феодосия, как вы будете управлять Западной и Восточной Римскими империями?#!"
+ 
+ #Император Гонорий 
+ bookmark_empire_honorius:0 "Император Гонорий I" 
+ bookmark_empire_honorius_desc:0 "Гонорий был первым императором Западной Римской империи, правившим с 395 по 423 год нашей эры, когда его сменил Иоанн. Во время его правления Западная Римская империя была ослаблена санкционированным правительством убийством Флавия Стилихона и разграблением Рима вестготами в 410 году нашей эры. \n\n#bold Считавшийся слабым в глазах римской публики, Гонорий вошел в историю с неблагоприятной репутацией. Сможете ли вы более эффективно играть роль императора Западной Римской империи?#!" 
 
- #Emperor Honorius #NT!
- bookmark_empire_honorius:0 "Emperor Honorius I" #NT!
- bookmark_empire_honorius_desc:0 "Honorius was the first Western Roman Emperor, reigning from 395 until 423 AD when he was succeeded by Joannes. During his reign, the Western Roman Empire was weakened with the government-sanctioned murder of Flavius Stilicho and the Sack of Rome in 410 AD by the Visigoths. \n\n#bold Seen as weak in the eyes of the Roman public, Honorius went down in history with an unfavorable reputation. Can you play the role of Western Roman Emperor more effectively?#!" #NT!
+ bookmark_flavius_stilicho:0 "Флавий Стилихон" 
+ bookmark_flavius_stilicho_desc:0 "После смерти императора Феодосия Флавию Стилихону было поручено управлять империей от имени императора Гонория. Хотя его отец был германцем по происхождению, Стилихон считает себя римлянином и сделает все возможное, чтобы помочь империи выжить и пережить бури, нависшие над ее будущим.." 
 
- bookmark_flavius_stilicho:0 "Flavius Stilicho" #NT!
- bookmark_flavius_stilicho_desc:0 "Following the death of Emperor Theodosius, Flavius Stilicho was entrusted to administer the empire on the behalf of Emperor Honorius. Although his father was of Germanic origin, Stilicho views himself as a Roman, and will do whatever it takes to help the empire survive and weather the storms that hang over her future." #NT!
+ #Император Аркадий 
+ bookmark_empire_arcadius:0 "Император Аркадий I" 
+ bookmark_empire_arcadius_desc:0 "Аркадий был первым императором Восточной Римской империи, правившим с 395 по 408 год нашей эры, когда его сменил сын Феодосий II. Во время его правления имперское правительство приняло более суровые меры против язычества, поскольку сам Аркадий уделял больше внимания своему благочестию, чем вопросам войны или политики. \n\n#bold После его смерти в 408 году нашей эры его правление считалось неэффективным, но относительно стабильным. По сравнению с этим нейтральным исходом, можете ли вы управлять Восточной Римской империей по-другому?#!" 
 
- #Emperor Arcadius #NT!
- bookmark_empire_arcadius:0 "Emperor Arcadius I" #NT!
- bookmark_empire_arcadius_desc:0 "Arcadius was the first Eastern Roman Emperor, reinging from 395 until 408 AD when his son, Theodosius II, succeeded him. During his reign, the Imperial Government pursued harsher measures against paganism as Arcadius himself put a greater emphasis on his piety rather than matters of war or politics. \n\n#bold By his death in 408 AD, his reign was seen as ineffective but relatively stable. Compared to this neutral outcome, can you lead the Eastern Roman Empire differently?#!" #NT!
-
- bookmark_empire_eudoxia:0 "Empress Aelia Eudoxia" #NT!
- bookmark_empire_eudoxia_desc:0 "Before the death of Emperor Theodosius, a marriage was arranged between Arcadius and Eudoxia, a Roman noblewomen. Though Arcadius lacked the wit and ambition to rule, the Imperial Couple reigned peacefully until Eudoxia's death in 404 AD." #NT!
+ bookmark_empire_eudoxia:0 "Императрица Элия Евдокия" 
+ bookmark_empire_eudoxia_desc:0 "Перед смертью императора Феодосия был заключен брак между Аркадием и Евдокией, римской дворянкой. Хотя Аркадию не хватало ума и амбиций, чтобы править, императорская чета мирно правила до смерти Евдоксии в 404 году нашей эры." 
 
