--- a/localization/russian/bookmark/bm_768_charlemagne_l_russian.yml
+++ b/localization/russian/bookmark/bm_768_charlemagne_l_russian.yml
@@ -1,8 +1,8 @@
 ﻿l_russian:
- bm_768_charlemagne:0 "The Rise of Charlemagne" #NT!
- bm_768_charlemagne_desc:1 "After the passing of Pepin the Short, the Frankish realm was divided between his sons, Charlemagne and Carloman. In Aquitaine, Duke Waiofar and his family were captured and executed on the orders of Pope Zachary. In his stead, Hunald II inherited Aquitaine and leads a rebellion against Charlemagne. With Carloman refusing to aid his brother, Charlemagne must handle the threat on his own.\n\n#bold Will Charlemagne lead the Frankish realm to glory, power, and wealth, or will he let the legacy left by his father turn to dust?#!" #NT!
+ bm_768_charlemagne:0 "Возвышение Карла Великого" 
+ bm_768_charlemagne_desc:1 "После кончины Пипина Короткого франкское королевство было разделено между его сыновьями Карлом Великим и Карломаном. В Аквитании герцог Вайофар и его семья были схвачены и казнены по приказу папы Захария. Вместо него Гунальд II унаследовал Аквитанию и возглавил восстание против Карла Великого. Поскольку Карломан отказывается помочь своему брату, Карл Великий должен справиться с угрозой самостоятельно.\n\n#bold Приведет ли Карл Великий Франкское королевство к славе, могуществу и богатству, или он позволит наследству, оставленному его отцом, превратиться в прах?#!" 
 
- #Charlemagne #NT!
- bookmark_charlemagne_charlemagne:0 "Charles the Great" #NT!
- bookmark_charlemagne_charlemagne_desc:0 "Charlemagne was the eldest son of Pepin the Short, and had extensive knowledge on warfare and literature. Upon his father's death, Charlemagne inherited the lands in Austrasia, Northern Neustria, and Western Aquitaine. His reign was greeted with revolt in the Duchy of Aquitaine. Can Charlemagne find greatness and lead his realm into a golden age, or will he be overwhelmed by ambitious vassals, politics, and civil war?#!" #NT!
+ #Карл Великий 
+ bookmark_charlemagne_charlemagne:0 "Карл Великий" 
+ bookmark_charlemagne_charlemagne_desc:0 "Карл Великий был старшим сыном Пипина Короткого и обладал обширными познаниями в военном деле и литературе. После смерти отца Карл Великий унаследовал земли в Австралии, Северной Нейстрии и Западной Аквитании. Его правление было встречено восстанием в герцогстве Аквитания. Сможет ли Карл Великий обрести величие и привести свое королевство в золотой век, или его захлестнут честолюбивые вассалы, политика и гражданская война?#!" 
 
