--- a/localization/russian/new_nicknames_l_russian.yml
+++ b/localization/russian/new_nicknames_l_russian.yml
@@ -1,30 +1,30 @@
 ﻿l_russian:
 
-nick_the_thin:0 "the Thin" #NT!
-nick_of_the_hosts:0 "of the Hosts" #NT!
-nock_of_the_nine_hostages:0 "of the Nine Hostages" #NT!
-nick_of_the_great_army:0 "of the Great Army" #NT!
-nick_steel_arms:0 "Steelarms" #NT!
-nick_the_ragged:0 "the Ragged" #NT!
-nick_the_lean:0 "the Lean" #NT!
-nick_the_dismal:0 "the Dismal" #NT!
-nick_the_stout:0 "the Stout" #NT!
-nick_finndu:0 "Finddu" #NT!
-nick_restitutor_orbis:0 "Restitutor Orbis" #NT!
-nick_the_warmonger:0 "the Warmonger" #NT!
-nick_the_incendiarist:0 "the Incendiarist" #NT!
-nick_the_one_eyed:0 "the One-Eyed" #NT!
-nick_the_burner:0 "the Burner" #NT!
-nick_kingslayer:0 "Kingslayer" #NT!
-nick_strong_arm:0 "Strong Arm" #NT!
-nick_augustulus:0 "Augustulus" #NT!
-nick_ignotus_eques:0 "Ignotus Eques" #NT!
-nick_the_wheelwright:0 "the Wheelwright" #NT!
-nick_the_hun:0 "the Hun" #NT!
-nick_scourge_of_god:0 "the Scourge of God" #NT!
-nick_father_of_the_north:0 "Father of the North" #NT!
-nick_mother_of_the_north:0 "Mother of the North" #NT!
-nick_britannicus:0 "Britannicus" #NT!
-nick_lion_of_asshur:0 "The Lion of Asshur" #NT!
-nick_parthicus:0 "Parthicus" #NT!
-nick_the_apostate:0 "The Apostate" #NT!
+nick_the_thin:0 "[Select_CString( CHARACTER.IsFemale, 'Тонкая', 'Тонкий' )]" 
+nick_of_the_hosts:0 "Хозяин" 
+nock_of_the_nine_hostages:0 "из Девяти заложников" 
+nick_of_the_great_army:0 "из Великой Армии" 
+nick_steel_arms:0 "Стальные руки" 
+nick_the_ragged:0 "[Select_CString( CHARACTER.IsFemale, 'Оборванная', 'Оборванный' )]" 
+nick_the_lean:0 "[Select_CString( CHARACTER.IsFemale, 'Бережливая', 'Бережливый' )]" 
+nick_the_dismal:0 "[Select_CString( CHARACTER.IsFemale, 'Мрачная', 'Мрачный' )]" 
+nick_the_stout:0 "[Select_CString( CHARACTER.IsFemale, 'Толстая', 'Толстый' )]" 
+nick_finndu:0 "Финдду" 
+nick_restitutor_orbis:0 "Реститутор Орбис" 
+nick_the_warmonger:0 "[Select_CString( CHARACTER.IsFemale, 'Разжигательница войны', 'Разжигатель войны' )]" 
+nick_the_incendiarist:0 "[Select_CString( CHARACTER.IsFemale, 'Поджигательница', 'Поджигатель' )]" 
+nick_the_one_eyed:0 "[Select_CString( CHARACTER.IsFemale, 'Одноглазая', 'Одноглазый' )]" 
+nick_the_burner:0 "Горелка" 
+nick_kingslayer:0 "Цареубийца" 
+nick_strong_arm:0 "Сильная рука" 
+nick_augustulus:0 "Августул" 
+nick_ignotus_eques:0 "Игнотус Экес" 
+nick_the_wheelwright:0 "Колесный мастер" 
+nick_the_hun:0 "Гунн" 
+nick_scourge_of_god:0 "Бич Божий" 
+nick_father_of_the_north:0 "Отец Севера" 
+nick_mother_of_the_north:0 "Мать Севера" 
+nick_britannicus:0 "Британник" 
+nick_lion_of_asshur:0 "Лев Ассура" 
+nick_parthicus:0 "Парфик" 
+nick_the_apostate:0 "[Select_CString( CHARACTER.IsFemale, 'Отступница', 'Отступник' )]" 
